# rust-boilerplate

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  Taskfile.yml  config.example.yml  docker-compose.yml
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/common/: Cargo.toml
crates/common/src/config/: database.rs  mod.rs
crates/common/src/database/: mod.rs
src/: main.rs
