[package]
name = "rust-boilerplate"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
clap = { version = "4.5.20", features = ["derive"] }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0.90"
config = { version = "0.14.0", features = ["yaml"] }
serde = "1.0.210"

# Minimizing Rust Binary Size
# https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "s"  # Optimize for size.
lto = true
codegen-units = 1
