[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
common = { path = "./crates/common" }

tracing-subscriber = "0.3.18"
tracing = "0.1.40"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0.90"
serde = { version = "1.0.210", features = ["derive"] }

# Minimizing Rust Binary Size
# https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "s"  # Optimize for size.
lto = true
codegen-units = 1
