[package]
name = "app"
version.workspace = true
edition.workspace = true

[dependencies]
common = { workspace = true }
clap = { version = "4.5.20", features = ["derive"] }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
